bpo-37146: disable opcache when Py_DEBUG is defined

--with-pydebug is commonly used to find memory leaks.
But opcache makes it harder.
So disable opcache when Py_DEBUG is defined.